# hierarchical-diffusion-rlhf-caption-refinement

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  verify_requirements.sh
configs/: ablation.yaml  default.yaml  smoke_test.yaml
results/: results.json
scripts/: evaluate.py  predict.py  train.py
src/hierarchical_diffusion_rlhf_caption_refinement/: __init__.py
src/hierarchical_diffusion_rlhf_caption_refinement/evaluation/: __init__.py  analysis.py  metrics.py
src/hierarchical_diffusion_rlhf_caption_refinement/models/: __init__.py  components.py  model.py
src/hierarchical_diffusion_rlhf_caption_refinement/training/: __init__.py  trainer.py
src/hierarchical_diffusion_rlhf_caption_refinement/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
